recursion.cons.lessons.recursion.cons.ButLast.scala.error
butLast:3: error: only classes can have declared but undefined members
(Note that variables need to be initialized to be defined)
var rep:List[Int]
    ^butLast:5: error: not found: value length
for (i <- 0 to length-2) {
               ^